Fix z-index, positioning, styling cleanup

--- a/src/content/VotingBar.css
+++ b/src/content/VotingBar.css
@@ -1,16 +1,7 @@
 #r2c-voting-container {
-  position: fixed;
-  bottom: 40px;
-  right: 0px;
-
   display: flex;
 
   background-color: #ddd;
-
-  animation: vote-container-in both 0.5s cubic-bezier(0.215, 0.61, 0.355, 1);
-  box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.15);
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .secarta-vote-button,
@@ -29,6 +20,7 @@
 
 .secarta-vote-button .vote-icon {
   overflow: hidden;
+  position: relative;
 }
 
 .secarta-vote-button {
@@ -145,16 +137,6 @@
 .secarta-vote-button.vote-question.voted {
   background-color: #634dbf;
   fill: #fff;
-}
-
-@keyframes vote-container-in {
-  0% {
-    right: -144px;
-  }
-
-  100% {
-    right: 0;
-  }
 }
 
 @keyframes vote-succeeded-icon {
